--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ author: Julian Bär, Lucille Niederhauser, Victoria Rivet, Anabel Salazar, Maxim
 
 # Image to show in the navigation bar (which is the little cat now)- works best with a square image
 # Remove this parameter if you don't want an image in the navbar
-avatar: "images/Hollywood_tape"
+avatar: "images/Hollywood_tape.png"
 
 # By default, the image is cut into a circle. You can disable this behaviour by setting 'round-avatar: false'
 round-avatar: true
