--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,8 @@
 
 # Name of website
 title: The Badabob Datastory
+# Short description of your site
+description: ADA 2023
 
 # Your name to show in the footer
 author: Julian Bär, Lucille Niederhauser, Victoria Rivet, Anabel Salazar, Maximilian Wettstein
@@ -41,7 +43,7 @@ round-avatar: true
 # You can change the order that they show up on the page by changing the order here.
 # Uncomment the links you want to show and add your information to each one.
 #social-network-links:
-github: anabeldorado/anabeldorado.github.io
+github: anabeldorado/badabob-datastory.github.io
 # email: "someone@example.com"
 # rss: true  # remove this line if you don't want to show an RSS link at the bottom
 # facebook: deanattali
@@ -74,7 +76,7 @@ github: anabeldorado/anabeldorado.github.io
 
 # If you want your website to generate an RSS feed, provide a description
 # The URL for the feed will be https://<your_website>/feed.xml
-rss-description: This website is a virtual proof that I'm awesome
+# rss-description: This website is a virtual proof that I'm awesome
 
 ###########################
 # --- General options --- #
@@ -102,12 +104,12 @@ feed_show_tags: true
 post_search: true
 
 # Add a button in the footer to edit the current page. Only works if your website is hosted on GitHub
-edit_page_button: true
+# edit_page_button: true
 
 # Allow sub-menu items (second-level navigation menu items) to be longer than the top-level menu
 # If this setting is off, then long sub-menu words might get cut off
 # See https://github.com/daattali/beautiful-jekyll/issues/765 to understand the issue this setting can solve
-navbar-var-length: false
+# navbar-var-length: false
 
 # The keywords to associate with your website, for SEO purposes
 #keywords: "my,list,of,keywords"
@@ -242,7 +244,7 @@ date_format: "%B %-d, %Y"
 #################################################################################
 
 # Output options (more information on Jekyll's site)
-timezone: "America/Toronto"
+timezone: "Europe/Zurich"
 markdown: kramdown
 highlighter: rouge
 permalink: /:year-:month-:day-:title/
